--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.appwidgetsample">
+    package="com.amg99.battery">
 
     <application
         android:allowBackup="true"
@@ -8,23 +8,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <receiver android:name=".NewAppWidget">
+        <receiver android:name="com.amg99.battery.BatteryWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/new_app_widget_info" />
+                android:resource="@xml/battery_widget_info" />
         </receiver>
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.amg99.battery.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name=".AlarmBroadcastReceiver"/>
+        <receiver android:name="com.amg99.battery.AlarmBroadcastReceiver"/>
     </application>
 
 </manifest>
